--- a/src/components/css.blueprints.css
+++ b/src/components/css.blueprints.css
@@ -63,7 +63,7 @@ input {
 
 svg {
     z-index:1;
-    background-color: white;
+    /* background-color: white; */
 }
 
 .chain:hover, .branch:hover, .delete:hover, .save:hover {
