--- a/src/components/blueprints.css
+++ b/src/components/blueprints.css
@@ -1,13 +1,13 @@
 #component {
-    display:flex;
+    /* display:flex;
     flex-direction:column;
-    justify-content:space-between;
+    justify-content:space-between; */
     /* align-items:center; */
     background-color: grey;
 
 }
 
-#container {
+#nodes {
     position:relative;
     width:100vw;
     height:100vh;
@@ -19,7 +19,7 @@
     height:70vh;
 }
 
-.object_series {
+.function_series {
     border:10px solid black;
     background-color: aqua;
     display:flex;
@@ -27,7 +27,7 @@
     /* justify-content:space-between; */
 }
 
-.object_series > li {
+.function_series > li {
     z-index:3;
 }
 
@@ -35,9 +35,24 @@ li {
     z-index:2;
     background-color: grey;
     padding:0px;
-    border:5px solid black;
+    /* border:5px solid black; */
     font-size:20px;
     height:100px;
+}
+
+li.complete {
+    border:5px solid green; 
+}
+li.complete:hover {
+    border:10px solid green; 
+}
+
+
+li.incomplete {
+    border:5px solid red; 
+}
+li.incomplete:hover {
+    border:10px solid red; 
 }
 
 ul {
@@ -52,13 +67,13 @@ input {
     width:70px;
 }
 
-.object:hover, .function:hover {
+.object:hover {
     border:10px solid black;
 }
 
-.function {
+.object {
     position:absolute;
-    z-index: 4;
+    /* z-index: 4; */
 }
 
 svg {
@@ -66,12 +81,23 @@ svg {
     /* background-color: white; */
 }
 
-.chain:hover, .branch:hover, .delete:hover, .save:hover {
+#name {
+    width:50vw;
+    font-size: 1em;
+}
+
+button.complete:hover, .chain:hover, .branch:hover, .delete:hover, #save:hover, #back:hover {
     color:red;
 }
 
-.save {
+#save, #back {
     margin:auto;
     margin:0 500px 0;
     z-index:100;
+    border: 4px solid black;
+    width: 50px;
+    background-color: white;
+    color:black;
+    text-decoration: none;
+    cursor: pointer;
 }
