--- a/src/components/blueprints.css
+++ b/src/components/blueprints.css
@@ -1,58 +1,74 @@
-#component {
-    /* display:flex;
-    flex-direction:column;
-    justify-content:space-between; */
-    /* align-items:center; */
-    background-color: grey;
+/* === [ Framework ] === */
 
+body {
+    background-color: rgb(49, 49, 49);
 }
 
-#nodes {
-    position:relative;
-    width:100vw;
-    height:100vh;
+#container {
+    border:10px solid black;
+    height:80vh;
+    width:80vw;
+
+    margin: 5vh auto;
+    background-color: rgb(194, 191, 191);
+
+    display:flex;
+    justify-content: space-around;
+    flex-flow: row wrap;
 }
 
-#nodes > ul, svg {
+.card {
+    color:white;
+    text-decoration: none;
+    text-align: center;
+
+    height:30%;
+    width:15%;
+}
+
+.incomplete { 
+    border:5px solid rgb(142, 0, 0);
+    background-color: rgb(251, 88, 88);
+}
+
+.incomplete:hover {
+    border:10px solid rgb(142, 0, 0);
+}
+
+.complete { 
+    border:5px solid rgb(0, 142, 40);
+    background-color: rgb(0, 185, 28);
+}
+
+.complete:hover { 
+    border:10px solid rgb(0, 142, 40);
+}
+
+/* === [ Blueprint Selector ] === */
+
+#add {
+    border:5px solid rgb(0, 5, 142);
+    background-color: rgb(0, 71, 178);
+    font-size: 60px;
+}
+
+.card:hover, #add:hover {
+    border:5px solid black;
+    cursor: pointer;
+}
+
+/* === [ Blueprint Forge ] === */
+
+#container > ul, svg {
     position:absolute;
-    width:90vw;
-    height:70vh;
+    height:80vh;
+    width:80vw;
 }
 
 .function_series {
-    border:10px solid black;
-    background-color: aqua;
+    /* border:10px solid black; */
     display:flex;
     align-items:center;
-    /* justify-content:space-between; */
-}
-
-.function_series > li {
-    z-index:3;
-}
-
-li { 
-    z-index:2;
-    background-color: grey;
-    padding:0px;
-    /* border:5px solid black; */
-    font-size:20px;
-    height:100px;
-}
-
-li.complete {
-    border:5px solid green; 
-}
-li.complete:hover {
-    border:10px solid green; 
-}
-
-
-li.incomplete {
-    border:5px solid red; 
-}
-li.incomplete:hover {
-    border:10px solid red; 
 }
 
 ul {
@@ -61,43 +77,55 @@ ul {
     padding:0;
 }
 
+li { 
+    z-index:2;
+    padding:0px;
+    font-size:20px;
+    height:100px;
+}
+
+input, button, .frame {
+    border:5px solid rgb(0, 0, 0);
+    background-color: rgb(71, 71, 71);
+    color:white;
+    text-decoration: none;
+    font-size: 15px;
+}
+
 input {
-    width:auto;
-    border:2px solid black;
+    font-size:1em;
     width:70px;
 }
 
-.object:hover {
-    border:10px solid black;
+input:hover, button:hover, .frame:hover {
+    border:5px solid rgb(0, 5, 142);
+    background-color: rgb(0, 71, 178);
 }
 
-.object {
+button:hover {
+    cursor: pointer;
+}
+
+.frame {
+
+}
+
+#frame-div {
     position:absolute;
-    /* z-index: 4; */
+    top:1vh;
+}
+
+#name {
+    position:absolute;
+    top:5vh;
+
+    width:50vw;
+    font-size: 2em;
+    text-align: center;
+    z-index:3;
 }
 
 svg {
     z-index:1;
     /* background-color: white; */
-}
-
-#name {
-    width:50vw;
-    font-size: 1em;
-}
-
-button.complete:hover, .chain:hover, .branch:hover, .delete:hover, #save:hover, #back:hover {
-    color:red;
-}
-
-#save, #back {
-    margin:auto;
-    margin:0 500px 0;
-    z-index:100;
-    border: 4px solid black;
-    width: 50px;
-    background-color: white;
-    color:black;
-    text-decoration: none;
-    cursor: pointer;
 }
