--- a/src/components/blueprints.css
+++ b/src/components/blueprints.css
@@ -1,5 +1,9 @@
 /* === [ Framework ] === */
 
+* {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body {
     background-color: rgb(49, 49, 49);
 }
@@ -10,7 +14,8 @@ body {
     width:80vw;
 
     margin: 5vh auto;
-    background-color: rgb(194, 191, 191);
+    /* background-color: rgb(194, 191, 191); */
+    background: linear-gradient(rgb(146, 153, 179), rgb(255, 255, 255));
 
     display:flex;
     justify-content: space-around;
@@ -21,9 +26,12 @@ body {
     color:white;
     text-decoration: none;
     text-align: center;
+    font-size: 2em;
 
     height:30%;
     width:15%;
+
+    /* border-radius: 5%; */
 }
 
 .incomplete { 
@@ -49,7 +57,7 @@ body {
 #add {
     border:5px solid rgb(0, 5, 142);
     background-color: rgb(0, 71, 178);
-    font-size: 60px;
+    font-size: 8em;
 }
 
 .card:hover, #add:hover {
@@ -84,20 +92,25 @@ li {
     height:100px;
 }
 
-input, button, .frame {
+textarea, button, .frame {
     border:5px solid rgb(0, 0, 0);
     background-color: rgb(71, 71, 71);
     color:white;
     text-decoration: none;
     font-size: 15px;
+
+    box-shadow: 2px 2px #000000;
 }
 
-input {
+textarea {
     font-size:1em;
-    width:70px;
+    width:5vw;
+
+    resize:none;
+    overflow:hidden;
 }
 
-input:hover, button:hover, .frame:hover {
+textarea:hover, button:hover, .frame:hover {
     border:5px solid rgb(0, 5, 142);
     background-color: rgb(0, 71, 178);
 }
