--- a/src/components/blueprints.css
+++ b/src/components/blueprints.css
@@ -9,16 +9,50 @@ body {
     background-color: rgb(49, 49, 49);
 }
 
-#container {
-    border:10px solid black;
-    height:80vh;
-    width:80vw;
+#container, #navbar {
+    position:absolute;
 
-    margin: 5vh auto;
-    /* background-color: rgb(194, 191, 191); */
+    /* box-sizing: border-box; */
+    left:10vw;
+    height:10vh;
+    width:80vw;
+    
+    border:10px solid black;
+
+    display: flex;
+}
+
+#navbar > li {
+    box-sizing: border-box;
+    border: 5px solid black;
+    height: calc(10vh - 12px);
     background: linear-gradient(rgb(146, 153, 179), rgb(255, 255, 255));
 
-    display:flex;
+    flex:4;
+}
+
+#navbar > li.selected {
+    background: linear-gradient(rgb(0, 55, 255), rgb(255, 255, 255));
+}
+
+#navbar > li > p {
+    /* padding:1vw 1vh; */
+    text-align: center;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+#navbar > li:hover {
+    flex:5;
+    border: 10px solid black;
+}
+
+#container {
+    height:80vh;
+    top:10vh;
+
+    background: linear-gradient(rgb(146, 153, 179), rgb(255, 255, 255));
+
     justify-content: space-around;
     flex-flow: row wrap;
 }
@@ -31,6 +65,8 @@ body {
 
     height:30%;
     width:15%;
+
+    cursor:move;
 
     /* border-radius: 5%; */
 }
@@ -61,8 +97,23 @@ body {
     font-size: 8em;
 }
 
+.priority-1:not(.complete) {
+    background-color: rgb(255, 47, 47);
+}
+.priority-2:not(.complete) {
+    border: 5px solid rgb(255, 119, 0);
+    background-color: rgb(255, 161, 39);
+}
+.priority-3:not(.complete) {
+    border: 5px solid rgb(255, 204, 0);
+    background-color: rgb(255, 244, 90);
+}
+
 .card:hover, #add:hover {
     border:5px solid black;
+}
+
+#add:hover, .radio:hover {
     cursor: pointer;
 }
 
@@ -122,14 +173,31 @@ button:hover {
 
 #frame-div {
     position:absolute;
-    top:1vh;
+    box-sizing: border-box;
+
+    left:45vw;
+    width:10vw;
+
+    height:8vh;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+#frame-div > * {
+    flex:1;
 }
 
 #name {
     position:absolute;
-    top:5vh;
+    box-sizing: border-box;
 
+    left:25vw;
     width:50vw;
+
+    top:5vh;
+    height:8vh;
+
     font-size: 2em;
     text-align: center;
     z-index:3;
