--- a/src/components/blueprints.css
+++ b/src/components/blueprints.css
@@ -40,12 +40,30 @@ body {
     text-align: center;
     font-weight: bold;
     font-size: 1em;
+    margin:0;
 }
 
 #navbar > li:hover {
     flex: 2;
     background: linear-gradient(rgb(0, 255, 60), rgb(255, 255, 255));
     cursor: pointer;
+}
+
+.indicator {
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
+
+.indicator > li {
+    color:black;
+    text-align: center;
+    font-size: .8em;
+    font-weight: bold;
+
+    width:1vw;
+    height:2vh;
+    z-index: 0;
 }
 
 #container {
@@ -67,7 +85,7 @@ body {
     border:10px solid rgb(142, 0, 0);
 }
 
-.complete { 
+.complete, .indicator-complete { 
     border:5px solid rgb(0, 142, 40);
     background-color: rgb(0, 185, 28);
 }
@@ -108,14 +126,15 @@ body {
     margin: auto 2vw;
 }
 
-.priority-1:not(.complete) {
+.priority-1, .indicator-priority-1 {
+    border: 5px solid rgb(105, 0, 0);
     background-color: rgb(255, 47, 47);
 }
-.priority-2:not(.complete) {
+.priority-2, .indicator-priority-2 {
     border: 5px solid rgb(255, 119, 0);
     background-color: rgb(255, 161, 39);
 }
-.priority-3:not(.complete) {
+.priority-3, .indicator-priority-3 {
     border: 5px solid rgb(255, 204, 0);
     background-color: rgb(255, 244, 90);
 }
