--- a/src/components/spaces.selector.css
+++ b/src/components/spaces.selector.css
@@ -62,7 +62,7 @@
     text-align: center;
     font-size: 2em;
 
-    width: 20vw;
+    width: 30vw;
     height:30vh;
     
     position:relative;
@@ -74,6 +74,7 @@
 
 .card-image {
     max-height:100%;
+    max-width:100%;
     margin:0 auto;
     border: 5px solid black;
     border-radius: 20px;
@@ -87,10 +88,6 @@
     left: 0;
   
     opacity: .8;
-}
-
-.card-image:hover + .card-image{
-    border: 10px solid black;
 }
 
 .card-content > * {
